[gd_scene load_steps=4 format=3 uid="uid://csae2sycqvgmn"]

[ext_resource type="Script" path="res://gui/pause_menu.gd" id="1_l1kpo"]
[ext_resource type="Texture2D" uid="uid://c8omrh0i0fqm8" path="res://assets/icon_color.svg" id="2_1o3jq"]
[ext_resource type="Theme" uid="uid://ctdkt0xgo2snw" path="res://gui/menu_theme.tres" id="3_wbkau"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 2
script = ExtResource("1_l1kpo")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_right = 69.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GodotTextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
offset_top = 45.0
offset_right = 272.0
offset_bottom = 250.0
texture = ExtResource("2_1o3jq")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 254.0
offset_right = 272.0
offset_bottom = 426.0
theme_override_constants/margin_bottom = 100

[node name="SokobanLabel" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
offset_right = 272.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 50
text = "Godotoban"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 430.0
offset_right = 272.0
offset_bottom = 485.0
focus_neighbor_top = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
theme = ExtResource("3_wbkau")
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 489.0
offset_right = 272.0
offset_bottom = 544.0
mouse_default_cursor_shape = 2
theme = ExtResource("3_wbkau")
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 548.0
offset_right = 272.0
offset_bottom = 603.0
focus_neighbor_bottom = NodePath("../ResumeButton")
mouse_default_cursor_shape = 2
theme = ExtResource("3_wbkau")
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_pause_menu_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
